# rust-dec

./: .editorconfig  Cargo.toml  README.md  RELEASING.md  update.sh
.github/workflows/: ci.yml
dec/: CHANGELOG.md  Cargo.toml
dec/benches/: dec.rs
dec/src/: context.rs  conv.rs  decimal.rs  decimal128.rs  decimal32.rs  decimal64.rs  error.rs  lib.rs  macros.rs  ordered.rs  tests.rs
dec/tests/: dec.rs  serde.rs
decnumber-sys/: CHANGELOG.md  Cargo.toml  LICENSE  build.rs  dec.bc
decnumber-sys/decnumber/: decBasic.c  decCommon.c  decNumber.c  decNumberLocal.h  decimal128.h  decimal32.h  decimal64.h
decnumber-sys/patch/: 01-unused-comma-expr.patch  02-alignment.patch  03-float-signed.patch
decnumber-sys/src/: lib.rs
decnumber-sys/tests/: basic.rs
dectest/: Cargo.toml
dectest/src/: ast.rs  backend.rs  lex.rs  lib.rs  main.rs  parse.rs  run.rs
dectest/src/backend/: decimal.rs  decimal128.rs  decimal32.rs  decimal64.rs
systest/: Cargo.toml  build.rs  extra.h
systest/src/: main.rs
testdata/: testall.decTest
